# strava-activity-sync

./: .env.template  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  vercel.json
api/: index.py
docs/: architecture.md  shared-context.md  strava-context.md  strava-setup.md  supabase-strava-integration.md
src/strava_activity_sync/: __init__.py  __main__.py  app.py  cli.py  config.py  logging.py
src/strava_activity_sync/api/: __init__.py  auth.py  cron.py  health.py  webhook.py
src/strava_activity_sync/domain/: __init__.py  activity_features.py  load_metrics.py  models.py
src/strava_activity_sync/scheduler/: __init__.py  jobs.py
src/strava_activity_sync/services/: __init__.py  apex_supabase_projector.py  backfill_service.py  exporters.py  render_service.py  strava_client.py  sync_service.py
src/strava_activity_sync/storage/: __init__.py  blob_repository.py  db.py  repositories.py
supabase/sql/: 2026-04-07_strava_integration.sql
tests/: conftest.py  test_analytics.py  test_apex_supabase_projector.py  test_rendering.py  test_strava_client.py  test_sync_service.py  test_vercel_blob.py
tests/fixtures/: activity_detail.json  activity_detail_second.json  activity_detail_updated.json  activity_page_1.json  athlete.json  laps.json  streams.json  webhook_create.json  webhook_delete.json  webhook_update.json  zones.json
tests/fixtures/payloads/: activities_page_1.json  activities_page_2.json  activity_1001_detail.json  activity_1001_laps.json  activity_1001_streams.json  activity_1001_zones.json  activity_1002_detail.json  (+12 more)
(+4 files in other folders)
