[project]
name = "strava-activity-sync"
version = "0.1.0"
description = "Local-first Strava activity sync service with deterministic markdown exports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4,<4",
  "fastapi>=0.115.0,<1",
  "httpx>=0.27.0,<1",
  "jinja2>=3.1.4,<4",
  "pydantic-settings>=2.6.1,<3",
  "typer>=0.12.5,<1",
  "uvicorn>=0.32.0,<1",
]

[project.scripts]
strava-sync = "strava_activity_sync.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.3,<9",
  "ruff>=0.7.2,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strava_activity_sync"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
